...
import com.epfl.beatlink.ui.search.components.ShortSearchBarLayout
import com.epfl.beatlink.ui.search.components.StandardLazyColumn
import com.epfl.beatlink.ui.theme.lightThemeBackground

@Composable
fun TrendingSongsScreen(navigationActions: NavigationActions) {
  val trendingSongsList = remember { mutableStateOf(listOf("Song 1")) }

  Scaffold(
      topBar = { ShortSearchBarLayout(navigationActions) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
...
