...
          onSuccess = { playlist -> userPlaylists.value = playlist },
          onFailure = { userPlaylists.value = emptyList() })
    }
  }

  Scaffold(
      modifier = Modifier.testTag("otherProfileScreen"),
      topBar = {
        ScreenTopAppBar(
            selectedProfileData?.username ?: "",
            "titleUsername",
            navigationAction,
            goBackManagement = { profileViewModel.goBackToPreviousUser() })
...
