...
  } else {
    Log.d("PeopleItem", "profile data null")
  }

  var requestStatus =
      when (selectedUserUserId.value) {
        in ownRequests -> "Requested"
        in friendRequests -> "Accept"
        in allFriends -> "Linked"
        else -> "Link"
      }

  LaunchedEffect(allFriends, selectedProfileDataNbLinks) {
...
